# grid-sample3d-trt-plugin

./: CMakeLists.txt  LICENSE  README.md
src/: grid_sample_3d.cu  grid_sample_3d.cuh  grid_sample_3d.h  grid_sample_3d_plugin.cpp  grid_sample_3d_plugin.h
test/: CMakeLists.txt  test.cpp  test_grid_sample3d_plugin.py
test/data/: grid.txt  input.txt  output.txt
